--- a/Lista_De_Exercicios_18_09_25.ipynb
+++ b/Lista_De_Exercicios_18_09_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNonr+2yEa8dkOGNOvV8kam",
+      "authorship_tag": "ABX9TyPFClJvaf2OXZrDe20DbPBZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -590,13 +590,31 @@
       "source": [
         "valor_fixo = float(input(\"Digite o valor fixo do seu salário de vendedor: \"))\n",
         "total_vendido_mes = float(input(\"Digite o total vendido no mês: \"))\n",
-        "comissao = float(input(\"Digite o percentual de comissão do vendedor: \"))"
+        "comissao = float(input(\"Digite o percentual de comissão do vendedor: \"))\n",
+        "valor_total_com_comissao = total_vendido_mes * (comissao/100)\n",
+        "salario_bruto = valor_fixo + valor_total_com_comissao\n",
+        "print(\"O seu salário bruto é de: {}\".format(salario_bruto))"
       ],
       "metadata": {
-        "id": "63tLr_5FXrcW"
+        "id": "63tLr_5FXrcW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a30e229-c3bf-46ee-bf6e-9a72aa12e105"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor fixo do seu salário de vendedor: 1500\n",
+            "Digite o total vendido no mês: 2000\n",
+            "Digite o percentual de comissão do vendedor: 5\n",
+            "O seu salário bruto é de: 1600.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
